Updating Mar '25 drafts

--- a/2025/2025-03-16-wir.md
+++ b/2025/2025-03-16-wir.md
@@ -13,7 +13,8 @@
 
 - Pivot's Galloway says long-term model may be akin to airlines. Consumers realize most of the benefits, but the business is brutal for operators. <!-- Link tk -->
 
-- WSJ on lessons from dotcom bubble: <!-- Link TK -->
+- WSJ on the dotcom bust's lessons for AI: https://www.wsj.com/tech/ai/what-the-dot-com-bust-can-tell-us-about-todays-ai-boom-c78482e7
+
 
 25th annivesrary of the Nasdaq bust. Wow.
 
@@ -33,6 +34,8 @@
 
 - **U.S. residents missed out** on as much as $5 billion in crypto airdrops from 2020 to 2024 due to geoblocking required by the country's financial regulations, according to a [new research report](https://airdropreport2025.dragonfly.xyz/Dragonfly-s-State-of-Airdrops-Report-2025-1b1af13b644180c8aff9c2bd0d222e14) from venture firm Dragonfly.
 
+
+- McCourt on the anniversary of "Our Biggest Fight." https://www.linkedin.com/pulse/one-year-later-reflecting-our-biggest-fight-frank-mccourt-odvye/?trackingId=QZwgrHzJIAGwWtcXvovusQ%3D%3D
 
 - Coinbase gains new approval from Indian regulators. ([CoinDesk](https://www.coindesk.com/business/2025/03/11/coinbase-plans-india-comeback-after-securing-regulatory-registration-with-fiu))
 
@@ -56,16 +59,6 @@
 
 - StarkWare creates BTC reserve ([The Block](https://www.theblock.co/post/345659/starkware-bitcoin-reserve?utm_source=rss&utm_medium=rss))
 
-- tk ([]())
-<<<<<<< Updated upstream
-
-=======
-
->>>>>>> Stashed changes
-- tk ([]())
-
-- WSJ on the dotcom bust's lessons for AI: https://www.wsj.com/tech/ai/what-the-dot-com-bust-can-tell-us-about-todays-ai-boom-c78482e7
-
 - WaPo on disappearing photo archives. https://www.washingtonpost.com/opinions/interactive/2025/photography-history-archive-photojournalism/
 
 ### Community
@@ -80,11 +73,15 @@
 
 -->
 
+- Ruth Marcus on leaving WaPo: https://www.newyorker.com/news/essay/why-ruth-marcus-left-the-washington-post
+
+- Nerd Reich censored on Facebook: https://www.thenerdreich.com/censored-on-facebook-the-nerd-reichs-meta-mystery/ | |
+
 ### Odds & Ends
 
-- tk ([]())
+- Birds have Alzheimer's-like neurological symptoms due to microplastics. ([The Guardian](https://www.theguardian.com/environment/2025/mar/12/plastic-pollution-leaves-seabirds-chicks-with-brain-damage-similar-to-alzheimers-study-aoe))
 
-- tk ([]())
+- The human brain may contain as much microplastic as goes into making a plastic spoon.([Smithsonian Magazine](https://www.smithsonianmag.com/smart-news/the-human-brain-may-contain-as-much-as-a-spoons-worth-of-microplastics-new-research-suggests-180985995/))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
