iterating Mar '25 drafts

--- a/2025/2025-03-23-wir.md
+++ b/2025/2025-03-23-wir.md
@@ -26,10 +26,33 @@
 - tk ([]())
 - tk ([]())
 
+<!--
+
+- McCourt on the anniversary of "Our Biggest Fight." https://www.linkedin.com/pulse/one-year-later-reflecting-our-biggest-fight-frank-mccourt-odvye/?trackingId=QZwgrHzJIAGwWtcXvovusQ%3D%3D
+
+- Effect of power tarriffs on US/Canadian bitcoin miners. <!-- Bitfarms CEO discussed on Bloomberg Crypto Tuesday. Link to that clip, or find coverage elsewhere.  ([]())
+
+- ICMI: Bitcoiner Dan Held on Trump family enriching themselves. ([Cointelegraph](https://www.youtube.com/watch?v=6UnogdVQWrE&ab_channel=Cointelegraph))
+
+- WaPo on disappearing photo archives. https://www.washingtonpost.com/opinions/interactive/2025/photography-history-archive-photojournalism/
+
+-->
+
 ### Community
 
-- tk ([]())
-- tk ([]())
+<!--
+
+- Ahrefs picks on AI content tools. https://ahrefs.com/blog/ai-content-creation-tools/
+
+- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
+
+- Niemoller quote: https://finance.yahoo.com/news/baidu-plans-raise-1-4-023911907.html
+
+- Carol Kelly on America's mass deportations: https://www.theroot.com/trump-s-mass-deportations-will-cause-millions-of-childr-1851766099
+
+- Ruth Marcus on leaving WaPo: https://www.newyorker.com/news/essay/why-ruth-marcus-left-the-washington-post
+
+-->
 
 ### Odds & Ends
 
