--- a/2025/2025-03-16-wir.md
+++ b/2025/2025-03-16-wir.md
@@ -11,43 +11,29 @@
 
 **A couple of new -- and sensible very sensible --takes on the AI boom:**  
 
-- Pivot's Galloway says long-term model may be akin to airlines. Consumers realize most of the benefits, but the business is brutal for operators. <!-- Link tk -->
+- Pivot's Galloway says long-term model may be akin to airlines. Consumers realize most of the benefits, but the business is brutal for operators. https://medium.com/@profgalloway/a-new-ai-world-fe79ca98c7d0
 
 - WSJ on the dotcom bust's lessons for AI: https://www.wsj.com/tech/ai/what-the-dot-com-bust-can-tell-us-about-todays-ai-boom-c78482e7
 
-
-25th annivesrary of the Nasdaq bust. Wow.
-
-<!-- 150-word lead item. Some possibilities...
-
-- AISENSE: Highlight a couple of seAI is like airlines, says Galloway. Riff on the Pivot podcast.
-
-- UNCOOL: Riff on Winkie's in Slate rant about the "uncoolness" of Trump II. This could also be a social post.
-
-- CARR: Riff on AoM intvu with author Nicholas Carr re: some of the downsides of digital communication. This could also fit in the news roundup, perhaps in odds & ends: https://www.artofmanliness.com/people/relationships/podcast-1054-familiarity-breeds-contempt-and-other-underappreciated-consequences-of-digital-communication/
-
-- BOYCOTTS: Why withholding money from a publicly traded company works. You only need to deny marginal metrics, not move them to zero in absolute terms.
-
--->
+25th annivesrary of the Nasdaq bust. Wow. Jakab column: https://www.wsj.com/livecoverage/stock-market-today-dow-nasdaq-sp500-03-10-2025/card/-what-were-you-thinking-the-dot-com-boom-peaked-25-years-ago-1SNaNjl0XlF4D9gBNHNE
 
 ### Week in Review: March 9-15, 2025
 
+- Update on Ethereum's Pectra upgrade ([Decrypt](https://decrypt.co/309520/ethereum-testnet-finality-pectra-upgrade))
+
+- Goldman mentions crypto in its annual letter. https://www.theblock.co/post/346411/for-the-first-time-goldman-sachs-acknowledges-crypto-in-annual-shareholder-letter
+
+- **Markets:** https://www.coindesk.com/markets/2025/03/15/gold-etfs-inflow-takes-over-bitcoin-etfs-amid-historic-rally | https://www.coindesk.com/markets/2025/03/15/21shares-to-liquidate-two-bitcoin-and-ether-futures-etfs-amid-market-downturn | https://www.theblock.co/post/346415/trump-backed-world-liberty-seems-to-refute-claims-of-binance-talks | https://decrypt.co/310003/gold-etfs-winning-the-asset-race-with-bitcoin-funds
+
+- **Washington Watch:** https://www.theblock.co/post/346481/only-10-of-americans-support-increasing-federal-funding-for-crypto-majority-oppose-reserve-poll | https://www.coindesk.com/markets/2025/03/14/trump-backed-world-liberty-financial-wlfi-completes-token-sale | https://decrypt.co/310039/house-bill-trump-bitcoin-reserve-one-major-difference https://www.cnbc.com/2025/03/14/david-sacks-sold-200-million-in-crypto-holdings-before-taking-wh-job.html| |
+
 - **U.S. residents missed out** on as much as $5 billion in crypto airdrops from 2020 to 2024 due to geoblocking required by the country's financial regulations, according to a [new research report](https://airdropreport2025.dragonfly.xyz/Dragonfly-s-State-of-Airdrops-Report-2025-1b1af13b644180c8aff9c2bd0d222e14) from venture firm Dragonfly.
-
-
-- McCourt on the anniversary of "Our Biggest Fight." https://www.linkedin.com/pulse/one-year-later-reflecting-our-biggest-fight-frank-mccourt-odvye/?trackingId=QZwgrHzJIAGwWtcXvovusQ%3D%3D
-
-- Coinbase gains new approval from Indian regulators. ([CoinDesk](https://www.coindesk.com/business/2025/03/11/coinbase-plans-india-comeback-after-securing-regulatory-registration-with-fiu))
 
 - Genius Act update  ([Decrypt](https://decrypt.co/309492/senate-banking-committee-to-vote-on-bipartisan-genius-stablecoin-bill-this-week)) <!-- Need an updated week Friday -->
 
-- Effect of power tarriffs on US/Canadian bitcoin miners. <!-- Bitfarms CEO discussed on Bloomberg Crypto Tuesday. Link to that clip, or find coverage elsewhere. --> ([]())
-
 - Big Circle upgrades ([CoinDesk](https://www.coindesk.com/tech/2025/03/10/circle-upgrades-cross-chain-transfer-protocol-promising-faster-usdc-settlements))
 
-- ICMI: Bitcoiner Dan Held on Trump family enriching themselves. ([Cointelegraph](https://www.youtube.com/watch?v=6UnogdVQWrE&ab_channel=Cointelegraph))
-
-- Update on Ethereum's Pectra upgrade ([Decrypt](https://decrypt.co/309520/ethereum-testnet-finality-pectra-upgrade))
+- Coinbase gains new approval from Indian regulators. ([CoinDesk](https://www.coindesk.com/business/2025/03/11/coinbase-plans-india-comeback-after-securing-regulatory-registration-with-fiu))
 
 - OpenAI closes $12B startup deal ([Decrypt](https://decrypt.co/309481/chatgpt-maker-openai-inks-12b-deal-with-coreweave-ahead-of-planned-ipo))
 
@@ -59,21 +45,7 @@
 
 - StarkWare creates BTC reserve ([The Block](https://www.theblock.co/post/345659/starkware-bitcoin-reserve?utm_source=rss&utm_medium=rss))
 
-- WaPo on disappearing photo archives. https://www.washingtonpost.com/opinions/interactive/2025/photography-history-archive-photojournalism/
-
-### Community
-
-<!--
-
-- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
-
-- Niemoller quote: https://finance.yahoo.com/news/baidu-plans-raise-1-4-023911907.html
-
-- Carol Kelly on America's mass deportations: https://www.theroot.com/trump-s-mass-deportations-will-cause-millions-of-childr-1851766099
-
--->
-
-- Ruth Marcus on leaving WaPo: https://www.newyorker.com/news/essay/why-ruth-marcus-left-the-washington-post
+- https://decrypt.co/310043/wales-man-loses-appeal-to-dig-out-hard-drive-holding-676-million-in-bitcoin
 
 - Nerd Reich censored on Facebook: https://www.thenerdreich.com/censored-on-facebook-the-nerd-reichs-meta-mystery/ | |
 
