Final draft for 16 Mar 2025

--- a/2025/2025-03-16-wir.md
+++ b/2025/2025-03-16-wir.md
@@ -1,5 +1,5 @@
-# tktk
-## tktk
+# AI for the long term
+## Looking for lessons in some unlikely places regarding where artificial intelligence is headed as a business
 
 ![Robot manning a workstation](https://images.unsplash.com/photo-1578374173703-71809a1757b1)
 
@@ -9,51 +9,43 @@
 
 <hr>
 
-**A couple of new -- and sensible very sensible --takes on the AI boom:**  
+**A couple of recent takes on AI** with a refreshingly long-term view:   
 
-- Pivot's Galloway says long-term model may be akin to airlines. Consumers realize most of the benefits, but the business is brutal for operators. https://medium.com/@profgalloway/a-new-ai-world-fe79ca98c7d0
+- **Scott Galloway argues** that airlines may offer a useful economic model to project [what AI will ultimately look like](https://medium.com/@profgalloway/a-new-ai-world-fe79ca98c7d0) as a business. Galloway, a widely followed podcaster/venture investor/marketing professor, says that would mean robust choice for customers but a persistently "brutal" business environment for companies, defined by perennially high operating costs, slim profit margins, and periodic shakeouts of weaker competitors. Hmm....
 
-- WSJ on the dotcom bust's lessons for AI: https://www.wsj.com/tech/ai/what-the-dot-com-bust-can-tell-us-about-todays-ai-boom-c78482e7
+- **The Wall Street Journal's Rolfe Winkler** mined the web1-era dotcom bubble for [lessons that might be relevant](https://www.wsj.com/tech/ai/what-the-dot-com-bust-can-tell-us-about-todays-ai-boom-c78482e7?st=aZR2U5&reflink=desktopwebshare_permalink) to today's AI boom. The original internet gold rush tends to be remembered for its widespread financial wreckage, but Winkler points out one highly encouraging factoid: The world's five most valuable listed companies in 2025 are all tech names either founded in the dotcom era or (as in the case of Apple) ones that succesfully re-defined themselves with profitable new products during the bubble. In that sense, Winkler says economists and historians may ultimately classify it as a "good bubble."
 
-25th annivesrary of the Nasdaq bust. Wow. Jakab column: https://www.wsj.com/livecoverage/stock-market-today-dow-nasdaq-sp500-03-10-2025/card/-what-were-you-thinking-the-dot-com-boom-peaked-25-years-ago-1SNaNjl0XlF4D9gBNHNE
+Hard to believe, but last week [marked the 25th anniversary](https://finance.yahoo.com/news/dot-com-bubble-popped-25-160001560.html) of the original dotcom bubble. That is to say, the Nasdaq Composite Index hit its peak close of the dotcom era at 5048.62 on March 10, 2000.
+
+If you feel like a more scenic walk down the memory lane of internet history, [here's my timeline](https://peteramckay.medium.com/a-brief-release-history-of-the-web-aeef5bb3b814) of product-related milestones that got us from web1 to web3.
 
 ### Week in Review: March 9-15, 2025
 
-- Update on Ethereum's Pectra upgrade ([Decrypt](https://decrypt.co/309520/ethereum-testnet-finality-pectra-upgrade))
+- **Ethereum's Pectra upgrade** went live on the Holesky test network. The Ethereum Foundation hasn't yet set an official target date for releasing Pectra on main network. But whenever it does become fully public, Petra is expected to be the biggest improvement to Ethereum since 2022's Big Merge, with improved scalability, efficiency, and staking. ([Decrypt](https://decrypt.co/309520/ethereum-testnet-finality-pectra-upgrade))
 
-- Goldman mentions crypto in its annual letter. https://www.theblock.co/post/346411/for-the-first-time-goldman-sachs-acknowledges-crypto-in-annual-shareholder-letter
+- **Setbacks for crypto ETFs:** Investors have recently been [putting more money](https://www.coindesk.com/markets/2025/03/15/gold-etfs-inflow-takes-over-bitcoin-etfs-amid-historic-rally) into U.S.-listed funds holding gold than funds holding bitcoin. The trend means the yellow metal has recently been more attractive as a safe haven at a time when recession fears have been roiling financial markets. Meanwhile, asset manager 21Shares said it will [shutter two of its exchange-traded funds](https://www.coindesk.com/markets/2025/03/15/21shares-to-liquidate-two-bitcoin-and-ether-futures-etfs-amid-market-downturn) tied to bitcoin and ether futures.
 
-- **Markets:** https://www.coindesk.com/markets/2025/03/15/gold-etfs-inflow-takes-over-bitcoin-etfs-amid-historic-rally | https://www.coindesk.com/markets/2025/03/15/21shares-to-liquidate-two-bitcoin-and-ether-futures-etfs-amid-market-downturn | https://www.theblock.co/post/346415/trump-backed-world-liberty-seems-to-refute-claims-of-binance-talks | https://decrypt.co/310003/gold-etfs-winning-the-asset-race-with-bitcoin-funds
+- **Goldman Sachs mentioned crypto** in its [annual shareholder letter](https://www.goldmansachs.com/investor-relations/financials/current/annual-reports/2024-annual-report/multimedia/2024-annual-report.pdf) for the first time ever, according to [The Block](https://www.theblock.co/post/346411/for-the-first-time-goldman-sachs-acknowledges-crypto-in-annual-shareholder-letter). The investment banking giant acknowledged crypto and AI as sources of increased competition for traditional banking.
 
-- **Washington Watch:** https://www.theblock.co/post/346481/only-10-of-americans-support-increasing-federal-funding-for-crypto-majority-oppose-reserve-poll | https://www.coindesk.com/markets/2025/03/14/trump-backed-world-liberty-financial-wlfi-completes-token-sale | https://decrypt.co/310039/house-bill-trump-bitcoin-reserve-one-major-difference https://www.cnbc.com/2025/03/14/david-sacks-sold-200-million-in-crypto-holdings-before-taking-wh-job.html| |
+- **The House and Senate versions of legislation** to create a new U.S. Strategic Bitcoin Reserve [differ significantly](https://decrypt.co/310039/house-bill-trump-bitcoin-reserve-one-major-difference) on whether the government should make fresh purchases of the token or simply hold on to bitcoin already seized in criminal cases. Either tactic could prove unpopular with the public, however. In a new poll by left-leaning Data for Progress, 51% of respondents said [they oppose creation](https://www.theblock.co/post/346481/only-10-of-americans-support-increasing-federal-funding-for-crypto-majority-oppose-reserve-poll) of a U.S. crypto reserve.
+
+- **Conflicts of interest galore:** Trump-backed decentralized finance platform World Liberty Financial completed a [$590 million token sale](https://www.coindesk.com/markets/2025/03/14/trump-backed-world-liberty-financial-wlfi-completes-token-sale). Both Bloomberg and the Wall Street Journal reported the platform is considering a purchase of Binance US, but the company ([sort of](https://www.theblock.co/post/346415/trump-backed-world-liberty-seems-to-refute-claims-of-binance-talks)) denied it publicly. Separately, a new memo from the White House counsel disclosed that David Sacks, the administration's AI and crypto czar, [sold $200 million in digital assets](https://www.cnbc.com/2025/03/14/david-sacks-sold-200-million-in-crypto-holdings-before-taking-wh-job.html) before starting his new job.
 
 - **U.S. residents missed out** on as much as $5 billion in crypto airdrops from 2020 to 2024 due to geoblocking required by the country's financial regulations, according to a [new research report](https://airdropreport2025.dragonfly.xyz/Dragonfly-s-State-of-Airdrops-Report-2025-1b1af13b644180c8aff9c2bd0d222e14) from venture firm Dragonfly.
 
-- Genius Act update  ([Decrypt](https://decrypt.co/309492/senate-banking-committee-to-vote-on-bipartisan-genius-stablecoin-bill-this-week)) <!-- Need an updated week Friday -->
+### Odds & Ends
 
-- Big Circle upgrades ([CoinDesk](https://www.coindesk.com/tech/2025/03/10/circle-upgrades-cross-chain-transfer-protocol-promising-faster-usdc-settlements))
+Some web2 platform drama to report on multiple fronts:
 
-- Coinbase gains new approval from Indian regulators. ([CoinDesk](https://www.coindesk.com/business/2025/03/11/coinbase-plans-india-comeback-after-securing-regulatory-registration-with-fiu))
+- **I'm having an issue with my Substack account,** which the moderators seem to believe is beset with bots among the subscribers. Hence you may notice I've defaulted back to my old MailChimp distribution as a backup this week. Troubleshooting the Substack issue and expect to be back to there shortly.
 
-- OpenAI closes $12B startup deal ([Decrypt](https://decrypt.co/309481/chatgpt-maker-openai-inks-12b-deal-with-coreweave-ahead-of-planned-ipo))
-
-- Lummis introduces bill to create promised crypto reserve. ([The Block](https://www.theblock.co/post/345689/sen-lummis-reintroduces-bill-to-create-trumps-planned-strategic-bitcoin-reserve?utm_source=rss&utm_medium=rss))
-
-- Nuffle Labs re-brand ([The Block](https://www.theblock.co/post/345571/near-foundations-independent-entity-nuffle-labs-rebrands-to-moremarkets-pivots-to-creating-an-integrated-liquidity-marketplace?utm_source=rss&utm_medium=rss))
-
-- Cathie Woods has been buying COIN shares during the recent stock-market dump. ([The Block](https://www.theblock.co/post/345639/cathie-wood-ark-invest-coinbase-shares-market-carnage?utm_source=rss&utm_medium=rss))
-
-- StarkWare creates BTC reserve ([The Block](https://www.theblock.co/post/345659/starkware-bitcoin-reserve?utm_source=rss&utm_medium=rss))
-
-- https://decrypt.co/310043/wales-man-loses-appeal-to-dig-out-hard-drive-holding-676-million-in-bitcoin
-
-- Nerd Reich censored on Facebook: https://www.thenerdreich.com/censored-on-facebook-the-nerd-reichs-meta-mystery/ | |
+- **Journalist Gil Duran,** an old friend of mine from newspaper days, makes a [compelling case here](https://www.thenerdreich.com/censored-on-facebook-the-nerd-reichs-meta-mystery/) that Meta is blocking re-shares of his posts for no other reason that that they don't like his content regarding right-wing extremism in the tech industry. If that topic is of interest to you, please [subscribe via email](https://www.thenerdreich.com/) to his newsletter, The Nerd Reich.
 
 ### Odds & Ends
 
-- Birds have Alzheimer's-like neurological symptoms due to microplastics. ([The Guardian](https://www.theguardian.com/environment/2025/mar/12/plastic-pollution-leaves-seabirds-chicks-with-brain-damage-similar-to-alzheimers-study-aoe))
+- **The amount of microplastics in human brains** seems to have increased sharply, up 50% from 2016 to 2024. According to a new study, the average brain may now have up to seven grams of microplastic in it -- about the amount required to make a plastic spoon. ([Smithsonian Magazine](https://www.smithsonianmag.com/smart-news/the-human-brain-may-contain-as-much-as-a-spoons-worth-of-microplastics-new-research-suggests-180985995/))
 
-- The human brain may contain as much microplastic as goes into making a plastic spoon.([Smithsonian Magazine](https://www.smithsonianmag.com/smart-news/the-human-brain-may-contain-as-much-as-a-spoons-worth-of-microplastics-new-research-suggests-180985995/))
+- **Eggs have gotten so expensive in America** that people have started smuggling in cheaper ones from Mexico. ([The Wall Street Journal](https://www.wsj.com/articles/mexico-egg-smuggling-prices-940b3163?st=FGPFY4&reflink=desktopwebshare_permalink))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
