--- a/2025/2025-03-23-wir.md
+++ b/2025/2025-03-23-wir.md
@@ -28,6 +28,12 @@
 
 <!--
 
+WSJ on de-dollarization: https://www.wsj.com/finance/currencies/trump-trade-tariffs-us-dollar-value-814cbe37
+
+- Kids using AI to cheat https://www.wsj.com/tech/ai/chatgpt-ai-cheating-students-97075d3c
+
+- US assault on universities: https://www.nytimes.com/2025/03/16/opinion/university-defunding-trump-rufo.html
+
 - McCourt on the anniversary of "Our Biggest Fight." https://www.linkedin.com/pulse/one-year-later-reflecting-our-biggest-fight-frank-mccourt-odvye/?trackingId=QZwgrHzJIAGwWtcXvovusQ%3D%3D
 
 - Effect of power tarriffs on US/Canadian bitcoin miners. <!-- Bitfarms CEO discussed on Bloomberg Crypto Tuesday. Link to that clip, or find coverage elsewhere.  ([]())
@@ -35,6 +41,28 @@
 - ICMI: Bitcoiner Dan Held on Trump family enriching themselves. ([Cointelegraph](https://www.youtube.com/watch?v=6UnogdVQWrE&ab_channel=Cointelegraph))
 
 - WaPo on disappearing photo archives. https://www.washingtonpost.com/opinions/interactive/2025/photography-history-archive-photojournalism/
+
+-->
+<!--
+
+- Genius Act update  ([Decrypt](https://decrypt.co/309492/senate-banking-committee-to-vote-on-bipartisan-genius-stablecoin-bill-this-week))
+
+- Big Circle upgrades ([CoinDesk](https://www.coindesk.com/tech/2025/03/10/circle-upgrades-cross-chain-transfer-protocol-promising-faster-usdc-settlements))
+
+- Nuffle Labs re-brand ([The Block](https://www.theblock.co/post/345571/near-foundations-independent-entity-nuffle-labs-rebrands-to-moremarkets-pivots-to-creating-an-integrated-liquidity-marketplace?utm_source=rss&utm_medium=rss))
+
+- Coinbase gains new approval from Indian regulators. ([CoinDesk](https://www.coindesk.com/business/2025/03/11/coinbase-plans-india-comeback-after-securing-regulatory-registration-with-fiu))
+
+- OpenAI closes $12B startup deal ([Decrypt](https://decrypt.co/309481/chatgpt-maker-openai-inks-12b-deal-with-coreweave-ahead-of-planned-ipo))
+
+- Lummis introduces bill to create promised crypto reserve. ([The Block](https://www.theblock.co/post/345689/sen-lummis-reintroduces-bill-to-create-trumps-planned-strategic-bitcoin-reserve?utm_source=rss&utm_medium=rss))
+
+
+- Cathie Woods has been buying COIN shares during the recent stock-market dump. ([The Block](https://www.theblock.co/post/345639/cathie-wood-ark-invest-coinbase-shares-market-carnage?utm_source=rss&utm_medium=rss))
+
+- StarkWare creates BTC reserve ([The Block](https://www.theblock.co/post/345659/starkware-bitcoin-reserve?utm_source=rss&utm_medium=rss))
+
+- https://decrypt.co/310043/wales-man-loses-appeal-to-dig-out-hard-drive-holding-676-million-in-bitcoin
 
 -->
 
