Updating March '25 drafts

--- a/2025/2025-03-23-wir.md
+++ b/2025/2025-03-23-wir.md
@@ -1,91 +1,109 @@
-# tktk
-## tktk
+# Social apps are using a new, less detectable form of tracking.
+## New research project is seeking volunteers to help sniff it out.
 
-![Robot manning a workstation](https://images.unsplash.com/photo-1578374173703-71809a1757b1)
+![Facebook guy with binoculars staring back at the reader through their own screen](https://w3w.news/img/facebook-glen-carrie-1920.jpg)
 
-*Photo by Rod Long via Unsplash*
+*Photo by Glen Carrie via Unsplash*
 
 *<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
 
 <hr>
 
-**Call me Ishmael.** Yadda yadda yadda.   
+**The Markup and Consumer Reports are partnering** on what sounds like a really interesting research project regarding a new form of user surveillance for social networks.
 
-<!-- 150-word lead item. Some possibilities...
+In a [new post](https://hackernoon.com/you-can-help-us-investigate-surveillance-marketing-using-facebook-data-heres-how?source=rss) to HackerNoon, the Markup explains this new tracking methodology:
 
-- UNCOOL: Riff on Winkie's rant in Slate about the "uncoolness" of Trump II. This could also be a social post.
+<blockquote>
 
-- CARR: Riff on AoM intvu with author Nicholas Carr re: some of the downsides of digital communication. This could also fit in the news roundup, perhaps in odds & ends: https://www.artofmanliness.com/people/relationships/podcast-1054-familiarity-breeds-contempt-and-other-underappreciated-consequences-of-digital-communication/
+  <p><em>Instead of relying on tracking pixels—which is web traffic that The Markup, Consumer Reports, and others can detect using tools in the browser—companies may now be tracking you in a way that’s completely undetectable by users and their devices.</p>
 
-- BOYCOTTS: Why withholding money from a publicly traded company works. You only need to deny marginal metrics, not move them to zero in absolute terms.
+  <p>It’s called “server-to-server tracking,” which essentially means that when companies get some information about you, their servers send it directly to another company’s server. Privacy research tools often rely on certain signals from your computer, mobile device, or browser to detect tracking. But “server-to-server tracking” doesn’t emit any of these sorts of signals.</p></em>
 
--->
+</blockquote>
+
+To get a clearer picture of what Meta in particular is up to in this regard, the Markup and Consumer Reports are [seeking volunteers](https://hackernoon.com/you-can-help-us-investigate-surveillance-marketing-using-facebook-data-heres-how?source=rss) to share their Facebook data. Then the news orgs plan to backward engineer what Meta seems to know about users that it otherwise wouldn't if it weren't tracking them server-to-server method.
+
+This is a big ask, no doubt. But I just want to amplify their call to action as it seems like a worthy effort by a couple of very credible news orgs.
+
+I know I'm not the only one who's already very curious to see what this project finds by the time it's done.
 
 ### Week in Review: March 16-22, 2025
 
-- tk ([]())
-- tk ([]())
+- **OpenAI released its first research** regarding ChatGPT's effects on users' emotions. Although the company doesn't promote ChatGPT as a companion app, OpenAI says a small subset of users do engage with it that way, averaging about a half hour a day. ([MIT Technology Review](https://www.technologyreview.com/2025/03/21/1113635/openai-has-released-its-first-research-into-how-using-chatgpt-affects-peoples-emotional-wellbeing/))
+
+- **Solana futures begain trading** on the Chicago Mercantile Exchange. ([Cointelegraph](https://cointelegraph.com/news/solana-futures-finish-first-day-of-listing-on-cme))
+
+- **Stablecoin issuer Tether** is in talks with a Big Four U.S. accounting firm to audit its reserves. ([Reuters](https://www.reuters.com/technology/tether-is-talks-with-big-four-firm-about-reserve-audit-ceo-says-2025-03-21/))
+
+- Strategy, formerly known as MicroStrategy, is raising $711 million to buy more bitcoin. ([CoinDesk](https://www.coindesk.com/markets/2025/03/21/strategy-raises-usd711m-to-buy-more-bitcoin-in-upsized-strf-perpetual-offering)) Other companies hoarding BTC: https://decrypt.co/300470/beyond-microstrategy-publicly-traded-companies-buying-bitcoin
+
+- SEC crypto roundtable ([CoinDesk](https://www.coindesk.com/policy/2025/03/21/sec-earnest-about-finding-workable-crypto-policy-commissioners-say-at-roundtable)) <!-- Additional coverage: https://www.theblock.co/post/347591/current-approach-is-clearly-a-failure-sec-crypto-task-force-roundtable-debates-future-regulation-of-digital-assets --> | White House eyeing blockchain for distributing foreign aid. ([CoinDesk](https://www.coindesk.com/policy/2025/03/21/trump-administration-eyes-blockchain-for-foreign-aid-in-usaid-overhaul-report))
+
+- America's president boosted his TRUMP memecoin in a Truth Social post. ([The Block](https://www.theblock.co/post/347641/trump-boosts-trump-memecoin-by-400-million-with-truth-social-post-sending-price-careening))
+
+- Lazarus Group, which has ties to the North Korea's Kim regime, hold more bitcoin than Tesla. ([CoinDesk](https://www.coindesk.com/markets/2025/03/21/north-korea-linked-lazarus-group-holds-more-bitcoin-than-elon-musk-s-tesla))
+
+- Ripple co-founder investing in company that wants to build its own space station. https://decrypt.co/311219/ripple-mtgox-founder-bets-billion-space-station
+
+- Vibe codign: https://decrypt.co/311144/vibe-coding-using-ai-create-apps-games
+
+
+
+
 
 <!--
 
-WSJ on de-dollarization: https://www.wsj.com/finance/currencies/trump-trade-tariffs-us-dollar-value-814cbe37
+Cutting room floor...
 
-- Kids using AI to cheat https://www.wsj.com/tech/ai/chatgpt-ai-cheating-students-97075d3c
+- **So much for learning to code.** Companies have recently been shedding programmers. ([Washington Post](https://news.google.com/read/CBMingFBVV95cUxQeU5pc0VuaUFMZXc3NHZ3NFk2ckZ1VWQ4NkNKNEZKMHY5WEdpX1JTai1nUEJpbUtyVnVNSHYzRllGU2J0aGM1OVBIYnhKblBTTzR1OWl5NXpDWjFISmVtbTZYX1lDOFM1SmloQ2RHbHZESXpqQklWRlhVVjNqQk4wRmJnLTNpcEROX0dFX29PdFlvZExGRlloeDNlTFVYUQ?hl=en-US&gl=US&ceid=US%3Aen)) | Forbes says employment in the sector recently hit its lowest level since 1970 https://news.google.com/read/CBMifEFVX3lxTFAzZTRSV29QYVlpaDZNS1diTU1ZXzduOWtrMDJSUTVzRk4yNzlDck41SEdkc0VXOVdvLXVRM3N5UzkyX3FxLXh3NFVEaUlwLUV0UzZDVF9pbUR5WTQwZEJIdzduVkVSOHJsX1cyODZXQzJPdVRiVV9oRk1EOWg?hl=en-US&gl=US&ceid=US%3Aen ([]())
 
-- US assault on universities: https://www.nytimes.com/2025/03/16/opinion/university-defunding-trump-rufo.html
+- **But news reporters are doing OK?** |  Data series shows -- flat? -- employment of news reporters in the U.S. since 1990. ([Washington Post](https://news.google.com/read/CBMikwFBVV95cUxOSTNlSDJkWGlXamRNWEM3ZWd1Sk5BMWc1WjFyQWZzR1htb2ZKUk9NSXlqcGZmSlo5NTJSTVdjUFdTSC05UmZjUHBMdXlPVFROdE1xbjE3dGZMR2cwRXY0eXRyc011alMzb3BIdVU0ekNjdWR3NGdUejBNWDZqMTUxRWNmek1UYkdCRk45SWpzZ0pxUW8?hl=en-US&gl=US&ceid=US%3Aen))
 
-- McCourt on the anniversary of "Our Biggest Fight." https://www.linkedin.com/pulse/one-year-later-reflecting-our-biggest-fight-frank-mccourt-odvye/?trackingId=QZwgrHzJIAGwWtcXvovusQ%3D%3D
+- The changing economics of tech. Crypto is part of it. https://www.coindesk.com/policy/2025/03/21/australia-proposes-new-crypto-regulation-structure-plans-to-integrate-digital-asset-into-the-economy
 
-- Effect of power tarriffs on US/Canadian bitcoin miners. <!-- Bitfarms CEO discussed on Bloomberg Crypto Tuesday. Link to that clip, or find coverage elsewhere.  ([]())
+https://www.wsj.com/business/entrepreneurship/googles-cybersecurity-deal-spins-tiny-investment-into-4-billion-windfall-15ddc637?mod=hp_lead_pos4
+
+https://www.wsj.com/business/autos/tesla-recalls-most-cybertrucks-71ef6fee?mod=lead_feature_below_a_pos1
+
+https://www.wsj.com/business/c-suite/leadership-qualities-decisive-ambivalence-b59c42d4?mod=hp_jr_pos1
+
+https://www.washingtonpost.com/lifestyle/2025/03/15/teacher-kindness-challenge-sister-memory-ulmer/
+
+
+https://www.wsj.com/business/c-suite/ai-strategy-mistakes-5db90efa
+
+Notion opening for the opp pipeline: https://job-boards.greenhouse.io/notion/jobs/6340548003
+
+NYT op-eds...
+
+https://www.nytimes.com/2025/03/21/opinion/democrats-trump-resistance.html
+
+https://www.nytimes.com/2024/11/08/opinion/republicans-democrats-trump.html
+
+- Fidelity delving furter into RWA with on-chain trading of Treasury debt. https://www.theblock.co/post/347637/fidelity-launches-onchain-ethereum-tracked-shares-for-treasury-money-market-fund
 
 - ICMI: Bitcoiner Dan Held on Trump family enriching themselves. ([Cointelegraph](https://www.youtube.com/watch?v=6UnogdVQWrE&ab_channel=Cointelegraph))
 
-- WaPo on disappearing photo archives. https://www.washingtonpost.com/opinions/interactive/2025/photography-history-archive-photojournalism/
+- Kids using AI to cheat https://www.wsj.com/tech/ai/chatgpt-ai-cheating-students-97075d3c
 
--->
-<!--
+- WSJ on de-dollarization: https://www.wsj.com/finance/currencies/trump-trade-tariffs-us-dollar-value-814cbe37
 
-- Genius Act update  ([Decrypt](https://decrypt.co/309492/senate-banking-committee-to-vote-on-bipartisan-genius-stablecoin-bill-this-week))
-
-- Big Circle upgrades ([CoinDesk](https://www.coindesk.com/tech/2025/03/10/circle-upgrades-cross-chain-transfer-protocol-promising-faster-usdc-settlements))
-
-- Nuffle Labs re-brand ([The Block](https://www.theblock.co/post/345571/near-foundations-independent-entity-nuffle-labs-rebrands-to-moremarkets-pivots-to-creating-an-integrated-liquidity-marketplace?utm_source=rss&utm_medium=rss))
-
-- Coinbase gains new approval from Indian regulators. ([CoinDesk](https://www.coindesk.com/business/2025/03/11/coinbase-plans-india-comeback-after-securing-regulatory-registration-with-fiu))
-
-- OpenAI closes $12B startup deal ([Decrypt](https://decrypt.co/309481/chatgpt-maker-openai-inks-12b-deal-with-coreweave-ahead-of-planned-ipo))
-
-- Lummis introduces bill to create promised crypto reserve. ([The Block](https://www.theblock.co/post/345689/sen-lummis-reintroduces-bill-to-create-trumps-planned-strategic-bitcoin-reserve?utm_source=rss&utm_medium=rss))
-
-
-- Cathie Woods has been buying COIN shares during the recent stock-market dump. ([The Block](https://www.theblock.co/post/345639/cathie-wood-ark-invest-coinbase-shares-market-carnage?utm_source=rss&utm_medium=rss))
-
-- StarkWare creates BTC reserve ([The Block](https://www.theblock.co/post/345659/starkware-bitcoin-reserve?utm_source=rss&utm_medium=rss))
-
-- https://decrypt.co/310043/wales-man-loses-appeal-to-dig-out-hard-drive-holding-676-million-in-bitcoin
 
 -->
 
-### Community
 
-<!--
 
-- Ahrefs picks on AI content tools. https://ahrefs.com/blog/ai-content-creation-tools/
 
-- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
 
-- Niemoller quote: https://finance.yahoo.com/news/baidu-plans-raise-1-4-023911907.html
 
-- Carol Kelly on America's mass deportations: https://www.theroot.com/trump-s-mass-deportations-will-cause-millions-of-childr-1851766099
-
-- Ruth Marcus on leaving WaPo: https://www.newyorker.com/news/essay/why-ruth-marcus-left-the-washington-post
-
--->
 
 ### Odds & Ends
 
-- tk ([]())
-- tk ([]())
+- **An Australian man with heart failure** has become the first person in the world to survive more than 100 days with an artificial titanium heart. ([Al Jazeera](https://aje.io/8vytwy))
+
+- **"Times are tough on Sesame Street."** The venerable children's show is facing an expiring contract with HBO, declining support from the U.S. government, and rising ratings competition from shows such as Bluey. ([New York Times](https://news.google.com/read/CBMikwFBVV95cUxQZDdaSDhsUV9pVHVMcVpWbUw2RGJOYVRmTHRNZlZkYVNBLXNzVl9IZlFzd3FwT1YtUVEwRXlIZzRXWHJJdHFGTFJ6WVFFcURVc3pfTF9HS2p2WUhMZVlWWlU1SjY1YTF0VkxQWDNWbmNSNmEtQ3BxeUZ0VXFxT2IyV1pvWEF2Nm85emM5a3pMYVZmNDA?hl=en-US&gl=US&ceid=US%3Aen))
+
+- **But things could be worse.** A British court this month rejected early bitcoiner James Howells' request to excavate a Wales landfill that he believes contains an old hard drive that his ex-girlfriend discarded in 2013. It contained the keys to his bitcoin wallet holding tokens now worth almost $700 million. ([Decrypt](https://decrypt.co/310043/wales-man-loses-appeal-to-dig-out-hard-drive-holding-676-million-in-bitcoin))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
