Fleshing out news items

--- a/2025/2025-03-23-wir.md
+++ b/2025/2025-03-23-wir.md
@@ -1,5 +1,5 @@
 # Social apps are using a new, less detectable form of tracking.
-## New research project is seeking volunteers to help sniff it out.
+## New research project is seeking volunteers to help sniff out server-to-server profiling of users.
 
 ![Facebook guy with binoculars staring back at the reader through their own screen](https://w3w.news/img/facebook-glen-carrie-1920.jpg)
 
@@ -11,7 +11,7 @@
 
 **The Markup and Consumer Reports are partnering** on what sounds like a really interesting research project regarding a new form of user surveillance for social networks.
 
-In a [new post](https://hackernoon.com/you-can-help-us-investigate-surveillance-marketing-using-facebook-data-heres-how?source=rss) to HackerNoon, the Markup explains this new tracking methodology:
+In a [new post](https://hackernoon.com/you-can-help-us-investigate-surveillance-marketing-using-facebook-data-heres-how?source=rss) to HackerNoon, the Markup explains the new tracking methodology:
 
 <blockquote>
 
@@ -35,7 +35,7 @@ I know I'm not the only one who's already very curious to see what this project 
 
 - **Stablecoin issuer Tether** is in talks with a Big Four U.S. accounting firm to audit its reserves. ([Reuters](https://www.reuters.com/technology/tether-is-talks-with-big-four-firm-about-reserve-audit-ceo-says-2025-03-21/))
 
-- Strategy, formerly known as MicroStrategy, is raising $711 million to buy more bitcoin. ([CoinDesk](https://www.coindesk.com/markets/2025/03/21/strategy-raises-usd711m-to-buy-more-bitcoin-in-upsized-strf-perpetual-offering)) Other companies hoarding BTC: https://decrypt.co/300470/beyond-microstrategy-publicly-traded-companies-buying-bitcoin
+- **Analytics provider Strategy,** formerly known as MicroStrategy, [raised $711 million](https://www.coindesk.com/markets/2025/03/21/strategy-raises-usd711m-to-buy-more-bitcoin-in-upsized-strf-perpetual-offering) to buy more bitcoin for its corporate treasury. Strategy now holds more than $40 billion in bitcoin and has spawned [a growing list](https://decrypt.co/300470/beyond-microstrategy-publicly-traded-companies-buying-bitcoin) of corporate imitators buying the token for their cash reserves.
 
 - SEC crypto roundtable ([CoinDesk](https://www.coindesk.com/policy/2025/03/21/sec-earnest-about-finding-workable-crypto-policy-commissioners-say-at-roundtable)) <!-- Additional coverage: https://www.theblock.co/post/347591/current-approach-is-clearly-a-failure-sec-crypto-task-force-roundtable-debates-future-regulation-of-digital-assets --> | White House eyeing blockchain for distributing foreign aid. ([CoinDesk](https://www.coindesk.com/policy/2025/03/21/trump-administration-eyes-blockchain-for-foreign-aid-in-usaid-overhaul-report))
 
