--- a/2025/2025-03-30-wir.md
+++ b/2025/2025-03-30-wir.md
@@ -24,33 +24,34 @@
 
 ### Week in Review: March 23-29, 2025
 
-### Community
+- TK ([]())
+- TK ([]())
+- TK ([]())
 
-### Odds & Ends
-
-<!--
-
-- US assault on universities: https://www.nytimes.com/2025/03/16/opinion/university-defunding-trump-rufo.html
-
-- Effect of power tarriffs on US/Canadian bitcoin miners. <!-- Bitfarms CEO discussed on Bloomberg Crypto Tuesday. Link to that clip, or find coverage elsewhere.  ([]())
-
-- WaPo on disappearing photo archives. https://www.washingtonpost.com/opinions/interactive/2025/photography-history-archive-photojournalism/
+<!-- Some leftovers from last few weeks... -->
 
 - Genius Act update  ([Decrypt](https://decrypt.co/309492/senate-banking-committee-to-vote-on-bipartisan-genius-stablecoin-bill-this-week))
 
-- Nuffle Labs re-brand ([The Block](https://www.theblock.co/post/345571/near-foundations-independent-entity-nuffle-labs-rebrands-to-moremarkets-pivots-to-creating-an-integrated-liquidity-marketplace?utm_source=rss&utm_medium=rss))
-
 - Ahrefs picks on AI content tools. https://ahrefs.com/blog/ai-content-creation-tools/
-
-- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
-
-- Niemoller quote: https://finance.yahoo.com/news/baidu-plans-raise-1-4-023911907.html
-
-- Carol Kelly on America's mass deportations: https://www.theroot.com/trump-s-mass-deportations-will-cause-millions-of-childr-1851766099
 
 - Ruth Marcus on leaving WaPo: https://www.newyorker.com/news/essay/why-ruth-marcus-left-the-washington-post
 
+
+<!--
+
+### Community
+
+- TK ([]())
+- TK ([]())
+- TK ([]())
+
 -->
+
+### Odds & Ends
+
+- WaPo on disappearing photo archives. https://www.washingtonpost.com/opinions/interactive/2025/photography-history-archive-photojournalism/ <!-- Get Google News link late in the week. -->
+
+- **Sandwiches in New York** have become enormous. ([Gothamist](https://gothamist.com/arts-entertainment/sandwiches-in-nyc-have-become-enormous-and-too-big-to-eat-so-i-tried-some))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
