Updating Mar/Apr '25 drafts

--- a/2025/2025-03-30-wir.md
+++ b/2025/2025-03-30-wir.md
@@ -1,49 +1,56 @@
-# tktk
-## tktk
+# The hidden lessons of Hegseth's Signal misadventures
+## See, this is why encryption back doors are a terrible idea.
 
-![Robot manning a workstation](https://images.unsplash.com/photo-1578374173703-71809a1757b1)
+![User holding a smartphone](https://w3w.news/img/phoneuser-yura-fresh-1920.jpg)
 
-*Photo by Rod Long via Unsplash*
+<!-- Backup photo option. This one is less eye-catching but a little more "on the news." Contains the Signal logo if we really need that to complement the copy later in the week: https://w3w.news/img/signal-mika-baumeister-1920.jpg -->
+
+*Photo by Yura Fresh via Unsplash*
 
 *<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
 
 <hr>
 
+**Good thing we never built that back door** into Signal that James Comey wanted back in TKTK. <!-- Link tktk -->
 
-<!-- 150-word lead item. Some possibilities...
+<!-- 150-word lead item. Riff on Pentagon's Signal disaster this week...
 
-- MEMECOINS: Cathie Wood gave a great cautionary note on memecoins on Bloomberg Crypto.
+1
 
-- UNCOOL: Riff on Winkie's rant in Slate about the "uncoolness" of Trump II. This could also be a social post.
+2. Encryption for me but not for thee.
 
-- CARR: Riff on AoM intvu with author Nicholas Carr re: some of the downsides of digital communication. This could also fit in the news roundup, perhaps in odds & ends: https://www.artofmanliness.com/people/relationships/podcast-1054-familiarity-breeds-contempt-and-other-underappreciated-consequences-of-digital-communication/
+3. Encryption will not protect systems or organizations from human error.
 
-- BOYCOTTS: Why withholding money from a publicly traded company works. You only need to deny marginal metrics, not move them to zero in absolute terms.
+If you are oblivious enough to copy a magazine editor on the message string where you're planning to bomb a foreign country, no form of encryption or any other technology will save you. The solution is to be smarter and do better, full stop.
+
+The same goes if you want to encrypt pictures of your kids or a conversation with your spouse or one with your boss or anything else.
 
 -->
 
 ### Week in Review: March 23-29, 2025
 
-- TK ([]())
-- TK ([]())
-- TK ([]())
 
-<!-- Some leftovers from last few weeks... -->
+- Bloomberg: Tokenized RWA market has reached $5B ([]()) <!-- Need link -->
 
-- Genius Act update  ([Decrypt](https://decrypt.co/309492/senate-banking-committee-to-vote-on-bipartisan-genius-stablecoin-bill-this-week))
+- Crucible Capital's Meltem Demirors says a lot of bitcoin ETF have proven to be "arbitrage buyers." They're buying shares, shorting bitcoin, and profiting on the spread. This isn't really a bullish thing for bitcoin, which helps explain sluggish price action. <!-- Theory offered on Bloomberg Crypto on 25 Mar, around the 22-min mark. Really interesting stuff. Grab YouTube link when it's available. -->
+
+- 23andme files for bankruptcy, may auction off user DNA info. Yikes. <!-- Need link -->
+
+- Genius Act update from the Crypto in America newsletter: https://www.cryptoinamerica.com/p/white-house-pushes-to-get-stablecoin
+
+- Good Bloomberg Originals vid on quantum computing: https://www.youtube.com/watch?v=1_gJp2uAjO0&t=704s
 
 - Ahrefs picks on AI content tools. https://ahrefs.com/blog/ai-content-creation-tools/
 
-- Ruth Marcus on leaving WaPo: https://www.newyorker.com/news/essay/why-ruth-marcus-left-the-washington-post
-
+### Community
 
 <!--
 
-### Community
+- Launch new Discord channel for w3w...
 
-- TK ([]())
-- TK ([]())
-- TK ([]())
+- Deprecate LinkedIn cross-posting
+
+- Start doing videos on YouTube and/or Substack
 
 -->
 
